--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,15 @@ on:
 jobs:
   test:
     name: MSBuild
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v5
 
       - name: Add msbuild to PATH
-        uses: microsoft/setup-msbuild@v1.1
+        uses: microsoft/setup-msbuild@v2
+        with:
+          vs-version: '17.14'
 
       - name: Build solution for release
         run: msbuild PastDSE.sln -t:rebuild -property:Configuration=Release
@@ -30,7 +32,7 @@ jobs:
         run: msbuild PastDSE.sln -t:rebuild -property:Configuration=Debug
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
           path: x64
